# PicoPico

./: CMakeLists.txt  PicoPico.cpp  PicoPico_res.rc  README.txt  resource.h
lang/: en_US.rc  ja_JP.rc
res/: Manifest_1.manifest
